Wed Jan  2 20:53:36 2008  Minero Aoki  <aamine@loveruby.net>

	* introduce ExprNode class for all expression nodes.

Wed Jan  2 19:45:01 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: check &expr is
	  assignable.

	* net/loveruby/cflat/ast/Node.java: new generic method
	  #isAssignable.

	* net/loveruby/cflat/ast/VariableNode.java: is assignable.

	* net/loveruby/cflat/ast/DereferenceNode.java: is assignable.

	* net/loveruby/cflat/ast/ArefNode.java: is assignable.

	* net/loveruby/cflat/ast/MemberNode.java: is assignable.

	* net/loveruby/cflat/ast/PtrMemberNode.java: is assignable.

Wed Jan  2 19:18:29 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: check return type.

	* net/loveruby/cflat/compiler/JumpResolver.java: set exiting
	  function to ReturnNode.

	* net/loveruby/cflat/ast/ReturnNode.java: new method #setExpr.

	* net/loveruby/cflat/ast/ReturnNode.java: new method #function.

	* net/loveruby/cflat/ast/ReturnNode.java: new method #setFunction.

	* net/loveruby/cflat/ast/Function.java: new method #isVoid.

	* net/loveruby/cflat/ast/Function.java: new method #returnType.

	* net/loveruby/cflat/ast/Function.java: new method #functionType.

	* net/loveruby/cflat/type/TypeRef.java: new method
	  #getPointerTypeRef.

	* net/loveruby/cflat/type/TypeRef.java: new method
	  #getArrayTypeRef.

	* net/loveruby/cflat/type/TypeRef.java: new method
	  #getStructTypeRef.

	* net/loveruby/cflat/type/TypeRef.java: new method
	  #getUnionTypeRef.

	* net/loveruby/cflat/type/TypeRef.java: new method
	  #getFunctionTypeRef.

	* net/loveruby/cflat/type/TypeRef.java: #isFunctionType ->
	  #isFunction.

	* net/loveruby/cflat/type/FunctionTypeRef.java: ditto.

	* net/loveruby/cflat/type/TypeRef.java: #isVoidTypeRef -> #isVoid.

	* net/loveruby/cflat/type/VoidTypeRef.java: ditto.

	* net/loveruby/cflat/type/TypeRef.java: #isArrayTypeRef ->
	  #isArray.
